force-app/main/default/objects/Integration_Work_Lock__c/Integration_Work_Lock__c.object-meta.xml
<CustomObject>
    <label>Integration Work Lock</label>
    <nameField>
        <label>Lock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Work Locks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>