force-app/main/default/objects/Integration_Work_Lock__c/fields/Lock_Key__c.field-meta.xml
<CustomField>
    <fullName>Lock_Key__c</fullName>
    <externalId>true</externalId>
    <label>Lock Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>