force-app/main/default/objects/Integration_Work_Lock__c/fields/Processor_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Processor_Job_Id__c</fullName>
    <label>Processor Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>