force-app/main/default/objects/Integration_Work_Lock__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>Integration_Work_Item__c</referenceTo>
    <relationshipLabel>Integration Work Locks</relationshipLabel>
    <relationshipName>Integration_Work_Locks</relationshipName>
    <type>Lookup</type>
</CustomField>